--- a/.github/workflows/publish-docs.yml
+++ b/.github/workflows/publish-docs.yml
@@ -1,7 +1,7 @@
-name: Deploy to website
+name: Publish docs
 on:
   push:
-    branches: ["master"]
+    branches: ["main"]
     paths: ["docs/**"]
 
 jobs:
