--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -23,6 +23,6 @@ jobs:
           registryUrl: https://marketplace.visualstudio.com
 
       - name: Publish to NPM
-        run: npm publish
+        run: cd taqwim && npm publish
         env:
           NODE_AUTH_TOKEN: ${{ secrets.npm_token }}
