--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -11,6 +11,7 @@ jobs:
       - uses: actions/setup-node@v1
         with:
           node-version: 18
+          registry-url: https://registry.npmjs.org/
       - run: npm ci
       - run: npm run build && cd taqwim && npm run build
       - run: xvfb-run -a npm test
