--- a/.github/workflows/publish-docs.yml
+++ b/.github/workflows/publish-docs.yml
@@ -2,7 +2,7 @@ name: Publish docs
 on:
   push:
     branches: ["main"]
-    paths: ["docs/**", "/taqwim/src/rules/"]
+    paths: ["docs/**", "/taqwim/src/rules/**"]
 
 jobs:
   web-deploy:
