--- a/taqwim/package.json
+++ b/taqwim/package.json
@@ -2,7 +2,7 @@
   "name": "@kalimahapps/taqwim",
   "description": "PHP linter and formatter",
   "author": "khr2003",
-  "version": "0.0.12",
+  "version": "0.0.13",
   "homepage": "https://taqwim.kalimah-apps.com/docs/",
   "repository": {
     "type": "git",
@@ -18,7 +18,7 @@
     "build-parser": "vite-node ./scripts/build-phpparser.ts",
     "build:watch": "tsc && vite build --watch",
     "coverage": "vitest run --coverage",
-    "coverage-ui": "npx vite preview --outDir coverage/",
+    "coverage:ui": "vite preview --outDir coverage/",
     "test": "vitest run",
     "test:ui": "vitest --ui",
     "test:watch": "vitest",
@@ -40,6 +40,7 @@
     "@types/node": "^20.3.1",
     "@types/yargs": "^17.0.24",
     "@vitest/coverage-v8": "^0.32.2",
+    "@vitest/ui": "^0.32.4",
     "cli-progress": "^3.12.0",
     "fs-extra": "^11.1.1",
     "globby": "^13.2.0",
