--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "name": "taqwim",
   "displayName": "PHPTaqwim",
   "description": "PHP linter and formatter",
-  "version": "0.0.13",
+  "version": "0.0.14",
   "homepage": "https://taqwim.kalimah-apps.com/",
   "repository": {
     "type": "git",
@@ -43,16 +43,16 @@
     "@kalimahapps/eslint-config": "^1.1.5",
     "@types/glob": "^8.1.0",
     "@types/jasmine": "^4.3.4",
-    "@types/node": "^20.3.1",
+    "@types/node": "^20.4.0",
     "@types/vscode": "^1.79.1",
     "@vscode/test-electron": "^2.3.3",
     "eslint": "^8.43.0",
-    "glob": "^10.3.0",
+    "glob": "^10.3.1",
     "jasmine": "^5.0.2",
     "markdown-it-attrs": "^4.1.6",
     "markdown-it-container": "^3.0.0",
-    "typescript": "^5.1.3",
-    "vite": "^4.3.9",
+    "typescript": "^5.1.6",
+    "vite": "^4.4.0",
     "vitepress": "^1.0.0-beta.3"
   },
   "keywords": [
@@ -72,5 +72,11 @@
   "engines": {
     "vscode": "^1.79.1",
     "node": ">=18.0.0"
+  },
+  "dependencies": {
+    "@vitest/coverage-v8": "^0.32.4",
+    "chalk": "^5.3.0",
+    "globby": "^13.2.2",
+    "vitest": "^0.32.4"
   }
 }
