--- a/taqwim/package.json
+++ b/taqwim/package.json
@@ -2,7 +2,7 @@
   "name": "@kalimahapps/taqwim",
   "description": "PHP linter and formatter",
   "author": "khr2003",
-  "version": "0.0.14",
+  "version": "0.0.15",
   "homepage": "https://taqwim.kalimah-apps.com/docs/",
   "repository": {
     "type": "git",
@@ -46,7 +46,8 @@
     "globby": "^13.2.2",
     "php-parser": "^3.1.5",
     "typescript": "^5.1.6",
-    "vite": "^4.4.0",
+    "vite": "^4.3.9",
+    "vite-node": "^0.32.4",
     "vitest": "^0.32.4"
   },
   "keywords": [
