--- a/taqwim/package.json
+++ b/taqwim/package.json
@@ -2,7 +2,7 @@
   "name": "@kalimahapps/taqwim",
   "description": "PHP linter and formatter",
   "author": "khr2003",
-  "version": "0.0.29",
+  "version": "0.0.30",
   "homepage": "https://taqwim.kalimah-apps.com/docs/",
   "repository": {
     "type": "git",
@@ -26,6 +26,7 @@
     "watch": "tsc -w -p ./"
   },
   "dependencies": {
+    "@kalimahapps/docblock-parser": "^1.0.7",
     "chalk": "^5.3.0",
     "change-case": "^4.1.2",
     "figlet": "^1.6.0",
