feat: add c8 coverage command

--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "build": "tsc && vite build",
     "build:watch": "tsc && vite build --watch",
     "compile": "tsc -p ./",
+    "coverage": "c8 --clean npm run test",
     "docs:build": "vitepress build docs",
     "docs:dev": "vitepress dev docs",
     "docs:preview": "vitepress preview docs",
@@ -52,6 +53,7 @@
     "@types/node": "^20.4.0",
     "@types/vscode": "^1.79.1",
     "@vscode/test-electron": "^2.3.3",
+    "c8": "^8.0.0",
     "eslint": "^8.43.0",
     "glob": "^10.3.1",
     "jasmine": "^5.0.2",
