--- a/taqwim/package.json
+++ b/taqwim/package.json
@@ -2,7 +2,7 @@
   "name": "@kalimahapps/taqwim",
   "description": "PHP linter and formatter",
   "author": "khr2003",
-  "version": "0.0.48",
+  "version": "0.0.49",
   "homepage": "https://taqwim.kalimah-apps.com/docs/",
   "repository": {
     "type": "git",
@@ -32,6 +32,7 @@
     "figlet": "^1.6.0",
     "glob": "^10.3.1",
     "levn": "^0.4.1",
+    "minimatch": "^9.0.3",
     "yargs": "^17.7.2"
   },
   "devDependencies": {
