--- a/package.json
+++ b/package.json
@@ -61,7 +61,7 @@
     "markdown-it-container": "^3.0.0",
     "typescript": "^5.1.6",
     "vite": "^4.3.9",
-    "vitepress": "^1.0.0-beta.3"
+    "vitepress": "^1.0.0-rc.4"
   },
   "keywords": [
     "php",
