--- a/package.json
+++ b/package.json
@@ -1,84 +1,82 @@
 {
-  "publisher": "KalimahApps",
-  "name": "taqwim",
-  "displayName": "PHPTaqwim",
-  "description": "PHP linter and formatter",
-  "version": "0.0.64",
-  "homepage": "https://taqwim.kalimah-apps.com/",
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/kalimahapps/taqwim.git"
-  },
-  "bugs": {
-    "url": "https://github.com/kalimahapps/taqwim/issues"
-  },
-  "license": "MIT",
-  "activationEvents": [
-    "onLanguage:php"
-  ],
-  "contributes": {
-    "jsonValidation": [
-      {
-        "fileMatch": [
-          "taqwim.config.js",
-          ".taqwim.json"
-        ],
-        "url": "https://raw.githubusercontent.com/kalimahapps/taqwim/main/schema.json"
-      }
-    ]
-  },
-  "scripts": {
-    "build": "tsc && vite build",
-    "build:watch": "tsc && vite build --watch",
-    "compile": "tsc -p ./",
-    "coverage": "c8 --clean npm run test",
-    "docs:build": "vitepress build docs",
-    "docs:dev": "vitepress dev docs",
-    "docs:preview": "vitepress preview docs",
-    "package": "vsce package",
-    "postinstall": "cd taqwim && npm install",
-    "test": "node ./dist/src/test/run-tests.js",
-    "vscode:prepublish": "npm run compile"
-  },
-  "dependencies": {
-    "@vitest/coverage-v8": "^0.32.4",
-    "chalk": "^5.3.0",
-    "globby": "^13.2.2",
-    "vitest": "^0.32.4"
-  },
-  "devDependencies": {
-    "@kalimahapps/eslint-config": "^1.2.91",
-    "@types/glob": "^8.1.0",
-    "@types/jasmine": "^4.3.5",
-    "@types/node": "^20.5.2",
-    "@types/vscode": "^1.81.0",
-    "@vscode/test-electron": "^2.3.4",
-    "c8": "^8.0.1",
-    "eslint": "^9.8.0",
-    "glob": "^10.3.3",
-    "jasmine": "^5.1.0",
-    "markdown-it-attrs": "^4.1.6",
-    "markdown-it-container": "^3.0.0",
-    "typescript": "^5.1.6",
-    "vite": "^5.3.5",
-    "vitepress": "^1.3.1"
-  },
-  "keywords": [
-    "php",
-    "format",
-    "lint",
-    "language"
-  ],
-  "categories": [
-    "Programming Languages",
-    "Linters",
-    "Formatters"
-  ],
-  "preview": true,
-  "main": "dist/src/index.js",
-  "icon": "assets/logo.png",
-  "engines": {
-    "vscode": "^1.81.0",
-    "node": ">=18.0.0"
-  }
+	"publisher": "KalimahApps",
+	"name": "taqwim",
+	"displayName": "PHPTaqwim",
+	"description": "PHP linter and formatter",
+	"version": "0.0.65",
+	"homepage": "https://taqwim.kalimah-apps.com/",
+	"repository": {
+		"type": "git",
+		"url": "https://github.com/kalimahapps/taqwim.git"
+	},
+	"bugs": {
+		"url": "https://github.com/kalimahapps/taqwim/issues"
+	},
+	"license": "MIT",
+	"activationEvents": ["onLanguage:php"],
+	"contributes": {
+		"jsonValidation": [
+			{
+				"fileMatch": [
+					"taqwim.config.js",
+					".taqwim.json"
+				],
+				"url": "https://raw.githubusercontent.com/kalimahapps/taqwim/main/schema.json"
+			}
+		]
+	},
+	"scripts": {
+		"build": "tsc && vite build",
+		"build:watch": "tsc && vite build --watch",
+		"compile": "tsc -p ./",
+		"coverage": "c8 --clean npm run test",
+		"docs:build": "vitepress build docs",
+		"docs:dev": "vitepress dev docs",
+		"docs:preview": "vitepress preview docs",
+		"package": "vsce package",
+		"postinstall": "cd taqwim && npm install",
+		"test": "node ./dist/src/test/run-tests.js",
+		"vscode:prepublish": "npm run compile"
+	},
+	"dependencies": {
+		"@vitest/coverage-v8": "^0.32.4",
+		"chalk": "^5.3.0",
+		"globby": "^13.2.2",
+		"vitest": "^0.32.4"
+	},
+	"devDependencies": {
+		"@kalimahapps/eslint-config": "^1.2.91",
+		"@types/glob": "^8.1.0",
+		"@types/jasmine": "^4.3.5",
+		"@types/node": "^20.5.2",
+		"@types/vscode": "^1.81.0",
+		"@vscode/test-electron": "^2.3.4",
+		"c8": "^8.0.1",
+		"eslint": "^9.8.0",
+		"glob": "^10.3.3",
+		"jasmine": "^5.1.0",
+		"markdown-it-attrs": "^4.1.6",
+		"markdown-it-container": "^3.0.0",
+		"typescript": "^5.1.6",
+		"vite": "^5.3.5",
+		"vitepress": "^1.3.1"
+	},
+	"keywords": [
+		"php",
+		"format",
+		"lint",
+		"language"
+	],
+	"categories": [
+		"Programming Languages",
+		"Linters",
+		"Formatters"
+	],
+	"preview": true,
+	"main": "dist/src/index.js",
+	"icon": "assets/logo.png",
+	"engines": {
+		"vscode": "^1.81.0",
+		"node": ">=18.0.0"
+	}
 }
