--- a/taqwim/package.json
+++ b/taqwim/package.json
@@ -1,69 +1,67 @@
 {
-  "name": "@kalimahapps/taqwim",
-  "description": "PHP linter and formatter",
-  "author": "khr2003",
-  "version": "0.0.64",
-  "homepage": "https://taqwim.kalimah-apps.com/docs/",
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/kalimahapps/taqwim.git"
-  },
-  "bugs": {
-    "url": "https://github.com/kalimahapps/taqwim/issues"
-  },
-  "type": "module",
-  "license": "MIT",
-  "scripts": {
-    "build": "tsc && vite build",
-    "build-parser": "vite-node ./scripts/build-phpparser.ts",
-    "build:watch": "tsc && vite build --watch",
-    "coverage": "vitest run --coverage",
-    "coverage:ui": "vite preview --outDir coverage/",
-    "test": "vitest run",
-    "test:ui": "vitest --ui",
-    "test:watch": "vitest",
-    "update-rules": "vite-node ./scripts/update-rules.ts",
-    "watch": "tsc -w -p ./"
-  },
-  "dependencies": {
-    "@kalimahapps/docblock-parser": "^1.2.1",
-    "chalk": "^5.3.0",
-    "change-case": "^4.1.2",
-    "figlet": "^1.6.0",
-    "glob": "^10.3.3",
-    "levn": "^0.4.1",
-    "minimatch": "^9.0.3",
-    "yargs": "^17.7.2"
-  },
-  "devDependencies": {
-    "@types/cli-progress": "^3.11.0",
-    "@types/figlet": "^1.5.6",
-    "@types/fs-extra": "^11.0.1",
-    "@types/node": "^20.5.2",
-    "@types/yargs": "^17.0.24",
-    "@vitest/coverage-v8": "^0.34.2",
-    "@vitest/ui": "^0.34.2",
-    "cli-progress": "^3.12.0",
-    "fs-extra": "^11.1.1",
-    "globby": "^13.2.2",
-    "php-parser": "^3.1.5",
-    "typescript": "^5.1.6",
-    "vite": "^4.4.9",
-    "vite-node": "^0.34.2",
-    "vitest": "^0.34.2"
-  },
-  "keywords": [
-    "php",
-    "linter",
-    "foramtter"
-  ],
-  "bin": {
-    "taqwim": "./dist/cli/index.js"
-  },
-  "files": [
-    "dist"
-  ],
-  "engines": {
-    "node": ">=17.0.0"
-  }
+	"name": "@kalimahapps/taqwim",
+	"description": "PHP linter and formatter",
+	"author": "khr2003",
+	"version": "0.0.65",
+	"homepage": "https://taqwim.kalimah-apps.com/docs/",
+	"repository": {
+		"type": "git",
+		"url": "https://github.com/kalimahapps/taqwim.git"
+	},
+	"bugs": {
+		"url": "https://github.com/kalimahapps/taqwim/issues"
+	},
+	"type": "module",
+	"license": "MIT",
+	"scripts": {
+		"build": "tsc && vite build",
+		"build-parser": "vite-node ./scripts/build-phpparser.ts",
+		"build:watch": "tsc && vite build --watch",
+		"coverage": "vitest run --coverage",
+		"coverage:ui": "vite preview --outDir coverage/",
+		"test": "vitest run",
+		"test:ui": "vitest --ui",
+		"test:watch": "vitest",
+		"update-rules": "vite-node ./scripts/update-rules.ts",
+		"watch": "tsc -w -p ./"
+	},
+	"dependencies": {
+		"@kalimahapps/docblock-parser": "^1.2.1",
+		"chalk": "^5.3.0",
+		"change-case": "^4.1.2",
+		"figlet": "^1.6.0",
+		"glob": "^10.3.3",
+		"levn": "^0.4.1",
+		"minimatch": "^9.0.3",
+		"yargs": "^17.7.2"
+	},
+	"devDependencies": {
+		"@types/cli-progress": "^3.11.0",
+		"@types/figlet": "^1.5.6",
+		"@types/fs-extra": "^11.0.1",
+		"@types/node": "^20.5.2",
+		"@types/yargs": "^17.0.24",
+		"@vitest/coverage-v8": "^0.34.2",
+		"@vitest/ui": "^0.34.2",
+		"cli-progress": "^3.12.0",
+		"fs-extra": "^11.1.1",
+		"globby": "^13.2.2",
+		"php-parser": "^3.1.5",
+		"typescript": "^5.1.6",
+		"vite": "^4.4.9",
+		"vite-node": "^0.34.2",
+		"vitest": "^0.34.2"
+	},
+	"keywords": [
+		"php",
+		"linter",
+		"foramtter"
+	],
+	"bin": {
+		"taqwim": "./dist/cli/index.js"
+	},
+	"files": ["dist"],
+	"engines": {
+		"node": ">=17.0.0"
+	}
 }
