--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
 	"name": "taqwim",
 	"displayName": "PHPTaqwim",
 	"description": "PHP linter and formatter",
-	"version": "0.0.66",
+	"version": "0.0.67",
 	"homepage": "https://taqwim.kalimah-apps.com/",
 	"repository": {
 		"type": "git",
@@ -12,8 +12,11 @@
 	"bugs": {
 		"url": "https://github.com/kalimahapps/taqwim/issues"
 	},
+	"packageManager": "pnpm@9.11.0+sha512.0a203ffaed5a3f63242cd064c8fb5892366c103e328079318f78062f24ea8c9d50bc6a47aa3567cabefd824d170e78fa2745ed1f16b132e16436146b7688f19b",
 	"license": "MIT",
-	"activationEvents": ["onLanguage:php"],
+	"activationEvents": [
+		"onLanguage:php"
+	],
 	"contributes": {
 		"jsonValidation": [
 			{
@@ -39,10 +42,8 @@
 		"vscode:prepublish": "npm run compile"
 	},
 	"dependencies": {
-		"@vitest/coverage-v8": "^0.32.4",
 		"chalk": "^5.3.0",
-		"globby": "^13.2.2",
-		"vitest": "^0.32.4"
+		"globby": "^13.2.2"
 	},
 	"devDependencies": {
 		"@kalimahapps/eslint-config": "^1.2.91",
@@ -50,6 +51,7 @@
 		"@types/jasmine": "^4.3.5",
 		"@types/node": "^20.5.2",
 		"@types/vscode": "^1.81.0",
+		"@vitest/coverage-v8": "^0.32.4",
 		"@vscode/test-electron": "^2.3.4",
 		"c8": "^8.0.1",
 		"eslint": "^9.8.0",
@@ -59,7 +61,8 @@
 		"markdown-it-container": "^3.0.0",
 		"typescript": "^5.1.6",
 		"vite": "^5.3.5",
-		"vitepress": "^1.3.1"
+		"vitepress": "^1.3.1",
+		"vitest": "^0.32.4"
 	},
 	"keywords": [
 		"php",
