--- a/package.json
+++ b/package.json
@@ -47,20 +47,23 @@
 		"@kalimahapps/eslint-config": "^1.2.93",
 		"@types/glob": "^8.1.0",
 		"@types/jasmine": "^4.3.5",
+		"@types/markdown-it-attrs": "^4.1.3",
+		"@types/markdown-it-container": "^2.0.10",
 		"@types/node": "^20.5.2",
 		"@types/vscode": "^1.81.0",
-		"@vitest/coverage-v8": "^0.32.4",
+		"@vitest/coverage-v8": "^4.0.15",
 		"@vscode/test-electron": "^2.3.4",
 		"c8": "^8.0.1",
 		"eslint": "^9.39.1",
 		"glob": "^10.3.3",
 		"jasmine": "^5.1.0",
+		"markdown-it-async": "^2.2.0",
 		"markdown-it-attrs": "^4.1.6",
 		"markdown-it-container": "^3.0.0",
-		"typescript": "^5.1.6",
-		"vite": "^5.3.5",
-		"vitepress": "^1.3.1",
-		"vitest": "^0.32.4"
+		"typescript": "^5.9.3",
+		"vite": "^7.2.7",
+		"vitepress": "^2.0.0-alpha.15",
+		"vitest": "^4.0.15"
 	},
 	"keywords": [
 		"php",
