--- a/package.json
+++ b/package.json
@@ -43,6 +43,9 @@
 		"chalk": "^5.3.0",
 		"globby": "^13.2.2"
 	},
+	"optionalDependencies": {
+		"@rollup/rollup-linux-x64-gnu": "4.9.5"
+	},
 	"devDependencies": {
 		"@kalimahapps/eslint-config": "^1.2.93",
 		"@types/glob": "^8.1.0",
